WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30717
Style problems present in Android-specific files
https://bugs.webkit.org/show_bug.cgi?id=30717
Summary
Style problems present in Android-specific files
Steve Block
Reported
2009-10-23 09:32:06 PDT
Android-specific files in WebCore/page/android/ and WebCore/platform/android/ contain style problems.
Attachments
Patch 1 for Bug 30717
(20.47 KB, patch)
2009-10-23 09:51 PDT
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2009-10-23 09:51:53 PDT
Created
attachment 41729
[details]
Patch 1 for
Bug 30717
Eric Seidel (no email)
Comment 2
2009-10-23 11:10:24 PDT
Comment on
attachment 41729
[details]
Patch 1 for
Bug 30717
LGTM.
Eric Seidel (no email)
Comment 3
2009-10-23 14:04:04 PDT
Comment on
attachment 41729
[details]
Patch 1 for
Bug 30717
Steve is not a committer to marking this cq+ even though he didn't request auto-commit.
WebKit Commit Bot
Comment 4
2009-10-23 15:40:43 PDT
Comment on
attachment 41729
[details]
Patch 1 for
Bug 30717
Clearing flags on attachment: 41729 Committed
r50006
: <
http://trac.webkit.org/changeset/50006
>
WebKit Commit Bot
Comment 5
2009-10-23 15:40:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug