WebCore/platform/android/ClipboardAndroid.h
@@ -33,31 +33,31 @@
 
 namespace WebCore {
 
-    class CachedImage;
+class CachedImage;
 
-    class ClipboardAndroid : public Clipboard, public CachedResourceClient {
-    public:
-        ClipboardAndroid(ClipboardAccessPolicy policy, bool isForDragging);
-        ~ClipboardAndroid();
-    
-        void clearData(const String&);
-        void clearAllData();
-        String getData(const String&, bool& success) const;
-        bool setData(const String&, const String&);
-    
-        // extensions beyond IE's API
-        HashSet<String> types() const;
-    
-        void setDragImage(CachedImage*, const IntPoint&);
-        void setDragImageElement(Node*, const IntPoint&);
-        
-        virtual DragImageRef createDragImage(IntPoint&) const;
-        virtual void declareAndWriteDragImage(Element*, const KURL&, const String&, Frame*);
-        virtual void writeURL(const KURL&, const String&, Frame*);
-        virtual void writeRange(Range*, Frame*);
+class ClipboardAndroid : public Clipboard, public CachedResourceClient {
+public:
+    ClipboardAndroid(ClipboardAccessPolicy policy, bool isForDragging);
+    ~ClipboardAndroid();
 
-        virtual bool hasData();
-    };
+    void clearData(const String&);
+    void clearAllData();
+    String getData(const String&, bool& success) const;
+    bool setData(const String&, const String&);
+
+    // extensions beyond IE's API
+    HashSet<String> types() const;
+
+    void setDragImage(CachedImage*, const IntPoint&);
+    void setDragImageElement(Node*, const IntPoint&);
+    
+    virtual DragImageRef createDragImage(IntPoint&) const;
+    virtual void declareAndWriteDragImage(Element*, const KURL&, const String&, Frame*);
+    virtual void writeURL(const KURL&, const String&, Frame*);
+    virtual void writeRange(Range*, Frame*);
+
+    virtual bool hasData();
+};
 
 } // namespace WebCore
 
