WebCore/platform/android/ScreenAndroid.cpp
@@ -31,13 +31,11 @@
 
 #include "FloatRect.h"
 #include "Widget.h"
-
+#include "ui/DisplayInfo.h"
+#include "ui/PixelFormat.h"
+#include "ui/SurfaceComposerClient.h"
 #undef LOG // FIXME: Still have to do this to get the log to show up
 #include "utils/Log.h"
-
-#include "ui/SurfaceComposerClient.h"
-#include "ui/PixelFormat.h"
-#include "ui/DisplayInfo.h"
 
 namespace WebCore {
 
@@ -70,18 +68,18 @@ int Screen::orientation() const
     // to the values described here
     // (http://developer.apple.com/documentation/AppleApplications/Reference/SafariWebContent/HandlingEvents/chapter_8_section_6.html)
     switch (info.orientation) {
-        case android::ISurfaceComposer::eOrientationDefault:
-            return 0;
-        case android::ISurfaceComposer::eOrientation90:
-            return 90;
-        case android::ISurfaceComposer::eOrientation180:
-            return 180;
-        case android::ISurfaceComposer::eOrientation270:
-            return -90;
-        default:
-            LOGE("Bad orientation returned from getDisplayIndo %d",
-                    info.orientation);
-            return 0;
+    case android::ISurfaceComposer::eOrientationDefault:
+        return 0;
+    case android::ISurfaceComposer::eOrientation90:
+        return 90;
+    case android::ISurfaceComposer::eOrientation180:
+        return 180;
+    case android::ISurfaceComposer::eOrientation270:
+        return -90;
+    default:
+        LOGE("Bad orientation returned from getDisplayIndo %d",
+                info.orientation);
+        return 0;
     }
 }
 #endif
